change hibernate tools